--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,41 @@
-handle = "A"
+[[clients]]
+handle = "Anton"
+port = 5000
+
+[[clients]]
+handle = "Alice"
 port = 5001
+
+[[clients]]
+handle = "Bob"
+port = 5002
+
+[[clients]]
+handle = "a"
+port = 5003
+
+[[clients]]
+handle = "t"
+port = 5004
+
+[[clients]]
+handle = "Christian"
+port = 5005
+
+[[clients]]
+handle = "christian"
+port = 5006
+
+[[clients]]
+handle = "chris"
+port = 5007
+
+[[clients]]
+handle = "b"
+port = 5008
+
+[defaults]
 whoisport = 4000
-autoreply = "Hey send me nothing"
-imagepath = "./images"
-dark_mode = false
+autoreply = "Ich bin nicht da."
+imagepath = "bilder/"
+port_range = [ 5000, 5100,]
